fixed horizontal scrollbar in the tablet view

--- a/stylesheets/he-web.css
+++ b/stylesheets/he-web.css
@@ -3,7 +3,7 @@ header.default {
 }
 
 .containner {
-  width: 960px;
+  width: 90%;
 }
 
 #home {
@@ -119,14 +119,14 @@ header.default {
 }
 
 #faleconosco input[type="text"] {
-  width: 405px;
+  width: 41%;
   padding: 15px;
   margin-left: 30px;
   margin-bottom:10px;
 }
 
 #faleconosco textarea {
-  width: 873px;
+  width: 89%;
   margin: 30px 0 30px 30px;
   padding: 15px;
 }
